2016-03-25 Yann LEYDIER <yann@leydier.info>
	* View Impl (cstr): Fixed @replacementPattern format.

2016-03-14 Yann LEYDIER <yann@leydier.info>
	* Document (cstr): Added <publicationStmt> to ontology file.
	* View Impl (cstr): Added <publicationStmt> to ontology links file.
	* View Impl (cstr): Corrected <prefixDef> patterns.
	* Oriflamms.desktop.in: Added.
	* AlignConfig (NOKChars): Removed.
	* AlignConfig (NAlWords, NAlChars): Added.
	* Document (AlignRange): Can now align only words that are not already
		aligned.
	* Document (AlignCharacters): Can now align only characters that are 
		not already aligned.

2016-03-10 Yann LEYDIER <yann@leydier.info>
	* GUI (overlay_changed): Now allows to correct character alignment.
	* GUI (display_supernumerarylines): Added.
	* GUI (rem_supernumeraryline): Added.
	* GUI (on_rmb_clicked): Now only display line popups in edit mode and 
			when a column is selected.
	* View (RemoveGraphicalLines): Added.
	* GUI (rem_lines): Added.
	* View (detectLines): Bugfix.

2016-03-09 Yann LEYDIER <yann@leydier.info>
	* GraphicalLine (ExtractFeatures): Bugfix.
	* View (AlignAll): Added.
	* GUI (align_selection): Now can align whole views.
	* GUI (tree_selection_changed): Now show a special cursor to indicate that
			it is not possible to add lines if a column is not selected.
	* GUI (edit_overlays): Now allows to modify characters.
	* GUI (display_characters): Now displays rectangles in edit mode.

2016-03-08 Yann LEYDIER <yann@leydier.info>
	* GUI (change_font): Now changes the whole application's font.
	* GUI (load_project): Bugfix.

2016-03-07 Yann LEYDIER <yann@leydier.info>
	* CharacterDialog (update_buttons): Now detects if the distance matrix is
			obsolete.
	* CharacterDialog (update_distmat): Added.
	* Document (cstr, readTextWElements, readTextCElements): Not using
			TEISelection anymore.
	* GUI (load_project): Not using TEISelection anymore.
	* View Impl (readLinkElements): Is now able to either report inconsistencies 